# helix

./: .cloudfront  .env  .eslintignore  .eslintrc.cjs  .gitignore  .lintstagedrc.mjs  .prettierignore  .prettierrc  .stylelintrc.json  .yarnrc.yml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  cypress.config.ts  eslint.config.mjs  nuxt.config.ts  package.json  playwright.config.ts  pyproject.toml  renovate.json  tsconfig.json  vitest.config.mts
.claude/: Makefile
.claude/plans/: rosy-squishing-puppy.md
.claude/rules/: content-system.md  git-workflow.md  styling.md  typescript.md  vue-components.md
.claude/skills/create-article/: SKILL.md
.claude/skills/create-image/: SKILL.md  pyproject.toml
.claude/skills/create-image/references/: visual-identity.md
.claude/skills/create-image/scripts/: create_image.py
.claude/skills/create-image/scripts/generators/: __init__.py  images.py
.claude/skills/create-image/scripts/models/: __init__.py  image.py
.claude/skills/create-image/scripts/utils/: __init__.py  aws.py  optimize.py
.claude/skills/create-skill/: SKILL.md
.claude/skills/review-seo/: SKILL.md  (+1 more)
.github/: pull_request_template.md
.github/workflows/: cloudfront-invalidation.yml  continuous-integration.yml  helix.yml  workflows-cleanup.yml
.husky/: commit-msg  pre-push
app/: app.vue  error.vue  router.options.ts  shims.d.ts
app/layouts/: scrolled.vue  snaped.vue
app/pages/: [...slug].vue
app/plugins/: gtag.client.ts
app/types/: components.ts  contents.ts  global.ts  routes.ts  settings.ts  vuetify.ts
app/utils/: links.ts  lottie.ts  meta.ts  publishing.ts  routes.ts
cypress/e2e/: selectors.ts  spec.ts
cypress/support/: e2e.ts
public/: llms-full.txt  llms.txt
server/plugins/: mdream.ts
src/: app.vue  error.vue  index.d.ts  shims-vue.d.ts
src/app/: router.options.ts
src/components/: index.ts
src/composables/: useAppTheme.ts
src/content/: app.json  index.ts  layout.json  meta.ts  root.json  schema.ts
src/layouts/: default.vue  error.vue  global.vue  legal-layout.vue  legal.vue  public.vue  snaped.vue
src/middleware/: layout.global.ts  redirect.global.ts
src/pages/: 404.vue  [...slug].vue  index.vue
src/plugins/: gtag.client.ts  lottie.client.ts  lottie.server.ts  vuetify.ts
src/public/: llms-full.txt  llms.txt  robots.txt
src/types/: components.ts  contents.ts  global.ts  index.ts  plugins.ts  routes.ts  settings.ts  vuetify.ts
src/utils/: constants.ts  meta.ts  routes.ts
tests/e2e/: selectors.ts  spec.spec.ts
tests/nuxt/: app-mount.spec.ts
tests/unit/: links.spec.ts
(+341 files in other folders)
