[project]
name = "skill-create-image"
version = "0.0.1"
description = "Image generator for Helix portfolio - minimalist black and white visuals"
authors = [{ name = "Meryll Dindin", email = "merylldin@gmail.com" }]
requires-python = "==3.13.*"
dependencies = [
    "boto3==1.42.44",
    "google-genai==1.59.0",
    "pillow==12.1.1",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
]
