[project]
name = "skill-create-image"
version = "0.0.1"
description = "Image generator for Helix portfolio - minimalist black and white visuals"
authors = [{ name = "Meryll Dindin", email = "merylldin@gmail.com" }]
requires-python = "==3.13.*"
dependencies = [
    "boto3==1.43.15",
    "google-genai==2.6.0",
    "pillow==12.2.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
]
